--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: no-commit-to-branch
+    -   id: detect-private-key
 
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
